--- a/src/index.html
+++ b/src/index.html
@@ -40,36 +40,46 @@
             <article class="art-one">
                 <h2>What´s different between pros?</h2>
                 <p class="text-mobile">
-                    Manage provides all the functionality your teas needs, without the complexity. Our software is tailor-made for modern digital product teams.
+                    Manage provides all the functionality your teas needs, without the complexity. Our software is
+                    tailor-made for modern digital product teams.
                 </p>
                 <p class="text-desktop">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet consequat purus sit amet sodales. In faucibus ut nisi eu dignissim. Vestibulum fringilla velit sed tincidunt tincidunt.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet consequat purus sit amet
+                    sodales. In faucibus ut nisi eu dignissim. Vestibulum fringilla velit sed tincidunt tincidunt.
                 </p>
             </article>
-            <article class="articles">
-                <p class="num">01</p>
-                <h3 class="title">Track company-wide progress</h3>
-                <p class="text">Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem,
-                    tempus
-                    pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget,
-                    consequat dolor.</p>
-            </article>
-            <article class="articles">
-                <p class="num">02</p>
-                <h3 class="title">Advance built-in reports</h3>
-                <p class="text">Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem,
-                    tempus
-                    pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget,
-                    consequat dolor.</p>
-            </article>
-            <article class="articles">
-                <p class="num">03</p>
-                <h3 class="title">Everything you need in one place</h3>
-                <p class="text">Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem,
-                    tempus
-                    pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget,
-                    consequat dolor.</p>
-            </article>
+        </section>
+        <section class="five">
+            <ol>
+                <li>
+                    <p class="num">01</p>
+                    <h3 class="title">Track company-wide progress</h3>
+                    <p class="text">
+                        Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem,
+                        tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam
+                        eget,consequat dolor.
+                    </p>
+                </li>
+                <li>
+                    <p class="num">02</p>
+                    <h3 class="title">Advance built-in reports</h3>
+                    <p class="text">
+                        Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem,
+                        tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam
+                        eget,consequat dolor.
+                    </p>
+                </li>
+                <li>
+                    <p class="num">03</p>
+                    <h3 class="title">Everything you need in one place</h3>
+                    <p class="text">
+                        Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem,
+                        tempuspellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam
+                        eget,
+                        consequat dolor.
+                    </p>
+                </li>
+            </ol>
         </section>
         <section class="info-three">
             <h2>Best of the month</h2>
