--- a/src/index.html
+++ b/src/index.html
@@ -143,7 +143,7 @@
             <img src="../imagenes/icon-instagram.svg" alt="Instagram">
         </div>
         <div>
-            <img src="../imagenes/logo.svg" alt="Logo">
+            <img class="logo-f" src="../imagenes/logo.svg" alt="Logo">
         </div>
 
         <p>Copyright 2020. All Rights Reserved</p>
