Se corrigen algunos errores

--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,17 @@
 <body>
     <header>
         <img class="logo-header" src="../imagenes/logo.svg" alt="Logo" />
-        <section class="menuHamb">
-            <nav class="menu">
-                <ul>
-                    <li>Sports</li>
-                    <li>Products</li>
-                    <li>About Us</li>
-                    <li>Trainning</li>
-                    <li>Community</li>
-                </ul>
-            </nav>
-        </section>
+
+        <nav class="menu">
+            <ul class="menu-desk">
+                <li>Sports</li>
+                <li>Products</li>
+                <li>About Us</li>
+                <li>Trainning</li>
+                <li>Community</li>
+            </ul>
+        </nav>
+
         <img class="menu-hamb" src="../imagenes/icon-hamburger.svg" alt="menu" />
         <button>Contact</button>
     </header>
@@ -33,71 +33,89 @@
                 <h1>LIVE: Follow the Telcel Huawei Mexico Open 2022 for free</h1>
                 <p>The final Open of the 2022 World Padel Tour season is underway, don't miss out on any of the action!
                 </p>
+                <button>Contact</button>
             </div>
-            <button>Contact</button>
         </article>
         <section class="info-two">
             <article class="art-one">
                 <h2>What´s different between pros?</h2>
-                <p>Manage provides all the functionality your teas needs, without the complexity. Our software is
-                    tailor-made for modern digital product teams.</p>
+                <p class="text-mobile">
+                    Manage provides all the functionality your teas needs, without the complexity. Our software is
+                    tailor-made for modern digital product teams.
+                </p>
+                <p class="text-desktop">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet consequat purus sit amet
+                    sodales. In faucibus ut nisi eu dignissim. Vestibulum fringilla velit sed tincidunt tincidunt.
+                </p>
             </article>
-            <article class="articles">
-                <p class="num">01</p>
-                <h3 class="title">Track company-wide progress</h3>
-                <p class="text">Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem,
-                    tempus
-                    pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget,
-                    consequat dolor.</p>
-            </article>
-            <article class="articles">
-                <p class="num">02</p>
-                <h3 class="title">Advance built-in reports</h3>
-                <p class="text">Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem,
-                    tempus
-                    pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget,
-                    consequat dolor.</p>
-            </article>
-            <article class="articles">
-                <p class="num">03</p>
-                <h3 class="title">Everything you need in one place</h3>
-                <p class="text">Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem,
-                    tempus
-                    pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget,
-                    consequat dolor.</p>
-            </article>
+        </section>
+        <section class="five">
+            <ol>
+                <li>
+                    <p class="num">01</p>
+                    <h3 class="title">Track company-wide progress</h3>
+                    <p class="text">
+                        Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem,
+                        tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam
+                        eget,consequat dolor.
+                    </p>
+                </li>
+                <li>
+                    <p class="num">02</p>
+                    <h3 class="title">Advance built-in reports</h3>
+                    <p class="text">
+                        Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem,
+                        tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam
+                        eget,consequat dolor.
+                    </p>
+                </li>
+                <li>
+                    <p class="num">03</p>
+                    <h3 class="title">Everything you need in one place</h3>
+                    <p class="text">
+                        Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem,
+                        tempuspellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam
+                        eget,
+                        consequat dolor.
+                    </p>
+                </li>
+            </ol>
         </section>
         <section class="info-three">
             <h2>Best of the month</h2>
-            <article class="sanyo">
-                <img src="../imagenes/avatar-sanyo.png" alt="Sanyo">
-                <h3>Sanyo</h3>
-                <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu
-                    neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-            </article>
-            <article class="lebron">
-                <img class="img-lebron" src="../imagenes/avatar.lebron.png" alt="Lebron">
-                <div>
-                    <h3 class="title-lebron">Lebron</h3>
-                    <p class="p-lebron">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut
-                        suscipit massa ipsum eu
+            <div class="players">
+                <article class="sanyo">
+                    <img class="img-sanyo" src="../imagenes/avatar-sanyo.png" alt="Sanyo">
+                    <h3 class="title-sanyo">Sanyo</h3>
+                    <p class="p-sanyo">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut
+                        suscipit massa ipsum
+                        eu
                         neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
                     </p>
-                </div>
-            </article>
-            <article class="navarro">
-                <img src="../imagenes/avatar-navarro.png" alt="Navarro">
-                <h3>Navarro</h3>
-                <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu
-                    neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-            </article>
+                </article>
+                <article class="lebron">
+                    <img class="img-lebron" src="../imagenes/avatar.lebron.png" alt="Lebron">
+                    <div>
+                        <h3 class="title-lebron">Lebron</h3>
+                        <p class="p-lebron">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut
+                            suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient
+                            montes, nascetur ridiculus mus.
+                        </p>
+                    </div>
+                </article>
+                <article class="navarro">
+                    <img class="img-navarro" src="../imagenes/avatar-navarro.png" alt="Navarro">
+                    <h3 class="title-navarro">Navarro</h3>
+                    <p class="p-navarro">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut
+                        suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes,
+                        nascetur ridiculus mus.
+                    </p>
+                </article>
+            </div>
             <button>More</button>
         </section>
         <article class="info-four">
-            <h2>Get to know the<br>
-                best<br>
-                teams of the<br>
-                year</h2>
+            <h2>Get to know the best teams of the year</h2>
             <button>Got for it</button>
         </article>
     </main>
@@ -125,7 +143,7 @@
             <img src="../imagenes/icon-instagram.svg" alt="Instagram">
         </div>
         <div>
-            <img src="../imagenes/logo.svg" alt="Logo">
+            <img class="logo-f" src="../imagenes/logo.svg" alt="Logo">
         </div>
 
         <p>Copyright 2020. All Rights Reserved</p>
